Creacion de rama usuarios

--- a/actividad-practica-profesional/Readme.mb
+++ b/actividad-practica-profesional/Readme.mb
@@ -1,70 +1,1 @@
-Sistema ABM de Usuarios en Kotlin
-
-Este proyecto es una aplicación de consola desarrollada en Kotlin que permite realizar operaciones básicas de ABM (Alta, Baja, Modificación) sobre una lista de usuarios almacenados en un archivo JSON.
-
-📁 Contenido del ZIP
-
-El archivo .zip contiene los siguientes elementos:
-
-    src/: Carpeta con los archivos fuente del programa (main.kt, GestorUsuarios.kt, etc.).
-
-    UsuariosParaPractica.json: Archivo con datos iniciales de usuarios en formato JSON (Contiene 2 usuarios).
-
-    README.md: Este archivo de documentación.
-
-🛠️ Tecnologías utilizadas
-
-    Kotlin
-    
-    Intellij IDEA
-
-    org.json (para parseo de JSON)
-
-    Lectura y escritura de archivos con la clase File proveniente de Java
-    
-    Programacion Orientado a Objetos
-
-🚀 ¿Qué funcionalidades incluye?
-
-    ✅ Dar de alta un usuario con nombre, apellido, correo (con validación de @) y contraseña.
-
-    📝 Modificar un usuario existente seleccionando qué campo cambiar.
-
-    ❌ Eliminar un usuario con confirmación.
-
-    🔍 Mostrar todos los usuarios registrados.
-
-    💾 Lectura y guardado automático en un archivo JSON para persistencia de datos.
-
-    🧾 Validaciones para evitar errores por entradas inválidas en el menú o en los datos.
-
-▶️ Cómo ejecutarlo
-
-    Descomprimir el archivo .zip.
-
-    Abrir el proyecto en IntelliJ IDEA (u otro entorno compatible con Kotlin como ser Android Studio, Eclipse con plugin, VS Code con extensiones o NetBeans).
-
-    Asegurarse de que la ruta del archivo JSON es correcta (src/UsuariosParaPractica.json).
-
-    Ejecutar el archivo main.kt.
-
-📦 Estructura del código
-
-/src
-├── GestorUsuarios.kt
-├── Main.kt
-├── FuncionesDelPrograma.kt
-├── parsearJson.kt
-├── Usuarios.kt
-├── UsuariosParaPractica.json
-README.md
-
-
-🧑‍💻 Autor
-
-Pedro Bustamante | Github: Pedro-kt
-
-Este proyecto fue desarrollado con fines educativos, como parte de la materia Prácticas Profesionalizantes I.
-
-No requiere conexión a internet ni librerías externas más allá de org.json. mencionado anteriormente
-
+Sistema ABM de Usuarios en KotlinEste proyecto es una aplicación de consola desarrollada en Kotlin que permite realizar operaciones básicas de ABM (Alta, Baja, Modificación) sobre una lista de usuarios almacenados en un archivo JSON.📁 Contenido del ZIPEl archivo .zip contiene los siguientes elementos:    src/: Carpeta con los archivos fuente del programa (main.kt, GestorUsuarios.kt, etc.).    UsuariosParaPractica.json: Archivo con datos iniciales de usuarios en formato JSON (Contiene 2 usuarios).    README.md: Este archivo de documentación.🛠️ Tecnologías utilizadas    Kotlin        Intellij IDEA    org.json (para parseo de JSON)    Lectura y escritura de archivos con la clase File proveniente de Java        Programacion Orientado a Objetos🚀 ¿Qué funcionalidades incluye?    ✅ Dar de alta un usuario con nombre, apellido, correo (con validación de @) y contraseña.    📝 Modificar un usuario existente seleccionando qué campo cambiar.    ❌ Eliminar un usuario con confirmación.    🔍 Mostrar todos los usuarios registrados.    💾 Lectura y guardado automático en un archivo JSON para persistencia de datos.    🧾 Validaciones para evitar errores por entradas inválidas en el menú o en los datos.▶️ Cómo ejecutarlo    Descomprimir el archivo .zip.    Abrir el proyecto en IntelliJ IDEA (u otro entorno compatible con Kotlin como ser Android Studio, Eclipse con plugin, VS Code con extensiones o NetBeans).    Asegurarse de que la ruta del archivo JSON es correcta (src/UsuariosParaPractica.json).    Ejecutar el archivo main.kt.📦 Estructura del código/src├── GestorUsuarios.kt├── Main.kt├── FuncionesDelPrograma.kt├── parsearJson.kt├── Usuarios.kt├── UsuariosParaPractica.jsonREADME.md🧑‍💻 AutorPedro Bustamante | Github: Pedro-ktEste proyecto fue desarrollado con fines educativos, como parte de la materia Prácticas Profesionalizantes I.No requiere conexión a internet ni librerías externas más allá de org.json. mencionado anteriormente
